Código alterado, apenas minerando as profissões; 74.5 mil objetos gerados.